// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aggregates multiple errata into a single play 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Upgrade the following packages:
#   - Apply RHSA-2017:1382
#   - Apply RHSA-2017:1852
#   - Apply RHSA-2017:2679
#   - Apply RHSA-2018:0502
# Identifier: (vulnerabilities:RHSA-2017:1382,vulnerabilities:RHSA-2017:1852,vulnerabilities:RHSA-2017:2679,vulnerabilities:RHSA-2018:0502,fix)
# Version: test
- name: update packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"RHSA-2017:1382 --advisory RHSA-2017:1852 --advisory RHSA-2017:2679 --advisory RHSA-2018:0502\\"
    insights_signature_exclude: \\"/hosts,/vars/insights_signature,/vars/insights_issues\\"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRWGh6ZG5jMU9FUXJhalZ3VGtGUlp5OUxRa0ZCYTNacE9V
      Tm9VaTlTWmtaV0syVjFZVmxsUVhCc1pVOXFTMDVwTldVeFJqTUtSRkpNTkhjMUwyRkdOR1pRVDJw
      UmRtbzBPVnB0Wmt4d1FrRlpjVWh4WTNjMFZIcHJha2RqY0dGUWNVMDBiVE5vWTIxSFJTdEJhbmhN
      TUhwcWRXVktTZ293YTJoVVNHTnFXbFprUW1WSVMzVjBOVXRRZFRoUVJIRm1jREU0UlVoUFQzcHNZ
      MjF3ZVdsblR6WkxZbU5UVjFaTmVVTjZkR0l3UzBGTFFqWktibmw2Q25GWWFUbDJkWEZ6WWt0dE5s
      cHZSa3hSTlVWQ1pqRmhZVlo2V1ZsdVFrMXNlVFp4ZFZOelpEZEVia2xLYm0weGVreE1iV1EwUzFw
      QmJWcGFkMVFyZFdVS1JrNHhRMDUwZGpaRk9GWTNTM2sxZDFVeFdYRnVRWGh4YW5FNGRrSlZiVE5R
      YURKcVVEZERhRE5MWTFkYU1IZDNTMk1yWldRME4yeE5XVTUyUkhnMU9BcFllV1JLWWxkaVdTdFha
      bGRzTTJWcU9ERTRlVzgzVUdKNU4xQlZTMGg2Tm1obGJrRllhakZZZHpKbWJFVXdja1V6SzBGSFlW
      TmFWMmRVYzNaYWFuTnJDa2hUVkdWamF6TXlhMkUzZWsxa2FEZHhSRkJ0VTNGQlkwOXRRWFZSZWxC
      VEt6UmlkbWtyUWxaRVZEaFlaSGhRVHpBMlpTdDNVV3BRY0VSWFRFaE1NMVFLUTFGeFJUVkNiVkpx
      VGxGRFVHODJNMlJVTUVwcU1USnFXa2xpY1VabVVIZHBiMWxhVTA5cVNuQmlNVmt4VWpSWFFXOXdT
      VGhzZDBjMVJrZEZaRTV2TVFvd2VFaHBkVkoyTjFjck0weFBRa3hCUldwM2QwdG9PRkE0VDI5UWVq
      SnlSMFpKY2pCSlUyeFROR0oyYkM5SmRuaDZTR2xFT1ZWMldUTjFZVk5uWVZoWkNsZzNSbkpxUW1a
      TFEzSlhRbFZTUm1oVEwyOXZhMlJRUVdWb1NsVlpZWHBsYlZRck1XNHJVM2h3YTFCMmFWQnRiRVJy
      ZDB0c2NIYzBlbTFtTms0NFZDc0tNbEVyZEdSR1pqRXlPWFJJVTJoMU1IaFhkVmhsTmpCc0wyZEdZ
      aTlpZUZaQlNrVnVabmxQY2xaa1kxUXpTMVJVVUhRdk5qSnhSWEl3T0VWamJXTkpWQXBGWnpWME5u
      YzRTbVp4TkQwS1BWaEJhME1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} update -d 2 -y --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Reboots a system if any of the preceeding plays sets the 'insights_needs_reboot' variable to true.
# The variable can be overridden to suppress this behavior.
- name: Reboot system (if applicable)
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRMVk0ZG5jMU9FUXJhalZ3VGtGUmFrMUVRa0ZCYTJOeE1W
      WlhVbEF3VUVoMGRIRjBWMGt4UkZSdU4zcE1kbFUyU0hKd2QxSUtUbkJ3Um5SWGJWRktiM2xxYm1w
      bE5XUmFSemMxUTNCU1kzZGFPRU5XVW5sRlRVRXpVREExZW1Kc1UzSnFWbTUxVW5oNlpVeG1SbTFy
      YW1SRVJWcHdjZ3ByWTJ0d2FFazJSVUpIYWtJemEyaGFUalJ5YTNwUWRWQm1PR1pMUVdsSE1ESmxk
      SGhXVFZWV01tZHRkV3c0UjBJMmRIcEpkRk5uVFRGQlFYQkdORTFRQ2s1NFRDOUpUMlY2ZFdRMGFt
      VlFaV05KZWpGS1dtMTVkVGgzWTNoVFZqWkpTbTVPU1VGSGVHYzVWRUpVYzNNMFEwbHVaVlZXY0RG
      VWRrUlFPUzlHVXk4S2VGaFlaMFphWlM5VlZuQjBaRzA1ZDJkbmRVOXRiR2hvWVZCTVZHNU5Tbkoy
      UVRsV2FVUnZRVzV2WWt0b1VIbEtZMHBSYjJOTFdrRlRjVTF6ZWs1VWNncHVNek5JYlRoUk9IQnRW
      VTFLYldobU9VRnZkM2x4VW5GWVVHeHpXVGwzT0UxRU1WQkZjR3htY2pJeVlYTjFMMHhvYjNGNlIz
      TmtOMUUxTTJwdFMyNXBDaXM1Y0VjeWEzVkNSVXhpVVhoblRHcERiVlZsUzFCdmJuaFhjM0JuVFZs
      M2VYQjFaVFJvYnl0dmFsZG5WRGR2ZG1GbFRFNVRTMkV2UkZOS2JEWldRaThLZEd4YUwxUXJPRFZr
      Ym5ZclNWb3phbEJTZFM5bVpuZFBkVVpVV2xoNmVGTkJUalZSV1M5ak15c3hhbUZSTDBKeFdYTmhi
      M2RpUkZreGRXUXZVeXRsYVFwa2FEa3JWRkV5TlVKa1NYa3hibGh3ZWpoV1JHbHpjbEp3Y0VrNWFs
      SldWakkwTVVVelRVWkhka1ZaTm1aVFYzSlZWMWMzY0RKbFpUbGphelpOVlUweUNrNUZjRXBLWm5G
      UFNFdHBjRXRPZVRKdVFVRTJURmcxTHpNeGFWSk9VSEZZVXpKRVdqSlpkbVZTUTJOMmVDOHZPVTlo
      UzFWd1FsZElZVmxYYW5STU4wWUtSWFJWVEZGeFZESkJPVTF3WjFSU1RtOU5WbEZ4Y1haQ01GUlBP
      WE00TmxoTmRuUkdRa1IzYW5SbWIxSm9NRnBEYlUwME1FRlhRMHBxT0RKNlduTlRZUXBCYXpkUEsy
      UkpkMFl5VVQwS1BWcEtiallLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - when:
        - insights_needs_reboot is defined
        - insights_needs_reboot
      block:
        - name: Reboot system
          shell: sleep 2 && shutdown -r now \\"Ansible triggered reboot\\"
          async: 1
          poll: 0
          ignore_errors: true

        - name: Wait for system to boot up
          local_action:
            module: wait_for
            host: \\"{{ hostvars[inventory_hostname]['ansible_host'] | default(hostvars[inventory_hostname]['ansible_ssh_host'], true) | default(inventory_hostname, true) }}\\"
            port: \\"{{ hostvars[inventory_hostname]['ansible_port'] | default(hostvars[inventory_hostname]['ansible_ssh_port'], true) | default('22', true) }}\\"
            delay: 15
            search_regex: OpenSSH
            timeout: 300
          become: false

- name: run insights
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`aggregates multiple errata-based issues into advisory/cve plays 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Upgrade the following packages:
#   - Apply RHSA-2017:1382
#   - Apply RHSA-2017:1852
#   - Apply RHSA-2017:2679
#   - Apply RHSA-2018:0502
# Identifier: (vulnerabilities:RHSA-2017:1382,vulnerabilities:RHSA-2017:1852,vulnerabilities:RHSA-2017:2679,vulnerabilities:RHSA-2018:0502,fix)
# Version: test-version
- name: update packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"RHSA-2017:1382 --advisory RHSA-2017:1852 --advisory RHSA-2017:2679 --advisory RHSA-2018:0502\\"
    insights_signature_exclude: \\"/hosts,/vars/insights_signature,/vars/insights_issues\\"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRWGh6ZG5jMU9FUXJhalZ3VGtGUlp5OUxRa0ZCYTNacE9V
      Tm9VaTlTWmtaV0syVjFZVmxsUVhCc1pVOXFTMDVwTldVeFJqTUtSRkpNTkhjMUwyRkdOR1pRVDJw
      UmRtbzBPVnB0Wmt4d1FrRlpjVWh4WTNjMFZIcHJha2RqY0dGUWNVMDBiVE5vWTIxSFJTdEJhbmhN
      TUhwcWRXVktTZ293YTJoVVNHTnFXbFprUW1WSVMzVjBOVXRRZFRoUVJIRm1jREU0UlVoUFQzcHNZ
      MjF3ZVdsblR6WkxZbU5UVjFaTmVVTjZkR0l3UzBGTFFqWktibmw2Q25GWWFUbDJkWEZ6WWt0dE5s
      cHZSa3hSTlVWQ1pqRmhZVlo2V1ZsdVFrMXNlVFp4ZFZOelpEZEVia2xLYm0weGVreE1iV1EwUzFw
      QmJWcGFkMVFyZFdVS1JrNHhRMDUwZGpaRk9GWTNTM2sxZDFVeFdYRnVRWGh4YW5FNGRrSlZiVE5R
      YURKcVVEZERhRE5MWTFkYU1IZDNTMk1yWldRME4yeE5XVTUyUkhnMU9BcFllV1JLWWxkaVdTdFha
      bGRzTTJWcU9ERTRlVzgzVUdKNU4xQlZTMGg2Tm1obGJrRllhakZZZHpKbWJFVXdja1V6SzBGSFlW
      TmFWMmRVYzNaYWFuTnJDa2hUVkdWamF6TXlhMkUzZWsxa2FEZHhSRkJ0VTNGQlkwOXRRWFZSZWxC
      VEt6UmlkbWtyUWxaRVZEaFlaSGhRVHpBMlpTdDNVV3BRY0VSWFRFaE1NMVFLUTFGeFJUVkNiVkpx
      VGxGRFVHODJNMlJVTUVwcU1USnFXa2xpY1VabVVIZHBiMWxhVTA5cVNuQmlNVmt4VWpSWFFXOXdT
      VGhzZDBjMVJrZEZaRTV2TVFvd2VFaHBkVkoyTjFjck0weFBRa3hCUldwM2QwdG9PRkE0VDI5UWVq
      SnlSMFpKY2pCSlUyeFROR0oyYkM5SmRuaDZTR2xFT1ZWMldUTjFZVk5uWVZoWkNsZzNSbkpxUW1a
      TFEzSlhRbFZTUm1oVEwyOXZhMlJRUVdWb1NsVlpZWHBsYlZRck1XNHJVM2h3YTFCMmFWQnRiRVJy
      ZDB0c2NIYzBlbTFtTms0NFZDc0tNbEVyZEdSR1pqRXlPWFJJVTJoMU1IaFhkVmhsTmpCc0wyZEdZ
      aTlpZUZaQlNrVnVabmxQY2xaa1kxUXpTMVJVVUhRdk5qSnhSWEl3T0VWamJXTkpWQXBGWnpWME5u
      YzRTbVp4TkQwS1BWaEJhME1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} update -d 2 -y --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Upgrade the following packages:
#   - Upgrade packages affected by CVE-2017-17712
#   - Upgrade packages affected by CVE-2017-5715
# Identifier: (vulnerabilities:CVE-2017-17712,vulnerabilities:CVE-2017-5715,fix)
# Version: test-version
- name: update vulnerable packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"CVE-2017-17712 --cve CVE-2017-5715\\"
    insights_signature_exclude: /hosts,/vars/insights_signature,/vars/insights_issues
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBTR2ROZG5jMU9FUXJhalZ3VGtGUmFqUnNRUzh2WlVKc1JH
      Sk1Rbk5JT0UxRFFuZEpkSEZMZW1SclduaDVNa2xCZW0xNlYyc0tLMHN3YmpBeWVIUnlWR2RwZG5B
      dlp6TTFXVVpQYjI5UVdqQTRka2xtWVdGVVZEVm5OVWRGZUhsRlVWVXJTMVZPVlVsUVRsUmxlVWxh
      WTJ3cmRuVkhWZ28zTTIxUldVUmlibE5qUkhKdVJFeE5kMUI0SzI0ME1WcGtRbkUzUml0TE5XbFJO
      bE5QTm5BNE5sUkJSbE5aVTFwYWVWUjJXVTl2UVZWRWNGQlFVWFpzQ2pWVVJWUnhOeTg1WWs1cFdY
      RTBRVTV4YzFwbU1GSXlUV3RRT0c5VVRVNVpVVTQ0VFRSMlNsUmFPR1JuUVRsa0sxUnFZbVZ0YmxS
      cmNEVk5VRXQwVWtzS01UWnFVMmg2ZW0xWFJFRjJSa1ZJVFc1U01FWTNla0pUU1c0emJYTkphRzVN
      YVdjelFqQkxSM1pyYWtaaGRUWldSa01yWkU5blZUbFBZakY2UkhOVlJRcHZRbWgwYXpkek1YQllU
      VWhOVW5wUVZHcDRiV3RQTDIxd09ISXhhMnhGZHpNMU5qUnNkMk52YmtKamJHOUVhbXRyWm5OalR6
      Y3lORGhHZVRJMFYxTmFDalJ1VFRCelYyVnpWRGxJUTFSelpITnRhVkV2WkhoQ01WQllkMlJFZHpC
      RFVuWnNRblpWUjNadWFHOXRNWEJCUTBveFFXbE5PRFI2VW1ZMU4zbHZWVzhLUjJabmVFaFpUMmhJ
      UW5oeE0wcFVjWEpST0U5UlkyOUlUbXR0VEdob2VqZGlWRWx5ZEZNM2FXUk1kQzl0UkVWSGJHZE1k
      VE5KWVdsUUsxWmtSbXRGY1FwdVExWXliSGxJWjJ4YVduTXJTM0F2YzAxd2NsSjFXRzk0TUVGa1RW
      SkVTR2xPU2pWRE9YVXdlR2x6WldSQlZIVkZaa05aZUZKSVV6TllWMjA0VUZCWUNteHJPV2t4VkVs
      cWRGRlVPRE53YzBObk9FSkxVRFV5WmxweU0wdG1UWEZVYnk5TkwzUTFVV1V6TXpKQ1RXaDNWblI0
      Wnpndk16YzNTSHBGUzNGRVdGWUtXbEpRTkRoTVkzVmhjbVpNTmtwUVp5dEtNbnBMUVZBMlZsUkVh
      RzR3YTBSVE5HWkhVR295Vm14SFp6SklXRGRJTWpGRWJFbzFWa1ZDV1RKbGJVNUdTQW96YW1VNFJV
      cEdiMGxJWnowS1BWRmpkRkFLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} upgrade -v -y --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Reboots a system if any of the preceeding plays sets the 'insights_needs_reboot' variable to true.
# The variable can be overridden to suppress this behavior.
- name: Reboot system (if applicable)
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRMVk0ZG5jMU9FUXJhalZ3VGtGUmFrMUVRa0ZCYTJOeE1W
      WlhVbEF3VUVoMGRIRjBWMGt4UkZSdU4zcE1kbFUyU0hKd2QxSUtUbkJ3Um5SWGJWRktiM2xxYm1w
      bE5XUmFSemMxUTNCU1kzZGFPRU5XVW5sRlRVRXpVREExZW1Kc1UzSnFWbTUxVW5oNlpVeG1SbTFy
      YW1SRVJWcHdjZ3ByWTJ0d2FFazJSVUpIYWtJemEyaGFUalJ5YTNwUWRWQm1PR1pMUVdsSE1ESmxk
      SGhXVFZWV01tZHRkV3c0UjBJMmRIcEpkRk5uVFRGQlFYQkdORTFRQ2s1NFRDOUpUMlY2ZFdRMGFt
      VlFaV05KZWpGS1dtMTVkVGgzWTNoVFZqWkpTbTVPU1VGSGVHYzVWRUpVYzNNMFEwbHVaVlZXY0RG
      VWRrUlFPUzlHVXk4S2VGaFlaMFphWlM5VlZuQjBaRzA1ZDJkbmRVOXRiR2hvWVZCTVZHNU5Tbkoy
      UVRsV2FVUnZRVzV2WWt0b1VIbEtZMHBSYjJOTFdrRlRjVTF6ZWs1VWNncHVNek5JYlRoUk9IQnRW
      VTFLYldobU9VRnZkM2x4VW5GWVVHeHpXVGwzT0UxRU1WQkZjR3htY2pJeVlYTjFMMHhvYjNGNlIz
      TmtOMUUxTTJwdFMyNXBDaXM1Y0VjeWEzVkNSVXhpVVhoblRHcERiVlZsUzFCdmJuaFhjM0JuVFZs
      M2VYQjFaVFJvYnl0dmFsZG5WRGR2ZG1GbFRFNVRTMkV2UkZOS2JEWldRaThLZEd4YUwxUXJPRFZr
      Ym5ZclNWb3phbEJTZFM5bVpuZFBkVVpVV2xoNmVGTkJUalZSV1M5ak15c3hhbUZSTDBKeFdYTmhi
      M2RpUkZreGRXUXZVeXRsYVFwa2FEa3JWRkV5TlVKa1NYa3hibGh3ZWpoV1JHbHpjbEp3Y0VrNWFs
      SldWakkwTVVVelRVWkhka1ZaTm1aVFYzSlZWMWMzY0RKbFpUbGphelpOVlUweUNrNUZjRXBLWm5G
      UFNFdHBjRXRPZVRKdVFVRTJURmcxTHpNeGFWSk9VSEZZVXpKRVdqSlpkbVZTUTJOMmVDOHZPVTlo
      UzFWd1FsZElZVmxYYW5STU4wWUtSWFJWVEZGeFZESkJPVTF3WjFSU1RtOU5WbEZ4Y1haQ01GUlBP
      WE00TmxoTmRuUkdRa1IzYW5SbWIxSm9NRnBEYlUwME1FRlhRMHBxT0RKNlduTlRZUXBCYXpkUEsy
      UkpkMFl5VVQwS1BWcEtiallLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - when:
        - insights_needs_reboot is defined
        - insights_needs_reboot
      block:
        - name: Reboot system
          shell: sleep 2 && shutdown -r now \\"Ansible triggered reboot\\"
          async: 1
          poll: 0
          ignore_errors: true

        - name: Wait for system to boot up
          local_action:
            module: wait_for
            host: \\"{{ hostvars[inventory_hostname]['ansible_host'] | default(hostvars[inventory_hostname]['ansible_ssh_host'], true) | default(inventory_hostname, true) }}\\"
            port: \\"{{ hostvars[inventory_hostname]['ansible_port'] | default(hostvars[inventory_hostname]['ansible_ssh_port'], true) | default('22', true) }}\\"
            delay: 15
            search_regex: OpenSSH
            timeout: 300
          become: false

- name: run insights
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`generates a simple playbook with multiple erratum-based remediation 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Apply RHSA-2018:0502
# Identifier: (vulnerabilities:RHSA-2018:0502,fix)
# Version: test
- name: update packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"RHSA-2018:0502\\"
    insights_signature_exclude: \\"/hosts,/vars/insights_signature,/vars/insights_issues\\"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRWGh6ZG5jMU9FUXJhalZ3VGtGUlp5OUxRa0ZCYTNacE9V
      Tm9VaTlTWmtaV0syVjFZVmxsUVhCc1pVOXFTMDVwTldVeFJqTUtSRkpNTkhjMUwyRkdOR1pRVDJw
      UmRtbzBPVnB0Wmt4d1FrRlpjVWh4WTNjMFZIcHJha2RqY0dGUWNVMDBiVE5vWTIxSFJTdEJhbmhN
      TUhwcWRXVktTZ293YTJoVVNHTnFXbFprUW1WSVMzVjBOVXRRZFRoUVJIRm1jREU0UlVoUFQzcHNZ
      MjF3ZVdsblR6WkxZbU5UVjFaTmVVTjZkR0l3UzBGTFFqWktibmw2Q25GWWFUbDJkWEZ6WWt0dE5s
      cHZSa3hSTlVWQ1pqRmhZVlo2V1ZsdVFrMXNlVFp4ZFZOelpEZEVia2xLYm0weGVreE1iV1EwUzFw
      QmJWcGFkMVFyZFdVS1JrNHhRMDUwZGpaRk9GWTNTM2sxZDFVeFdYRnVRWGh4YW5FNGRrSlZiVE5R
      YURKcVVEZERhRE5MWTFkYU1IZDNTMk1yWldRME4yeE5XVTUyUkhnMU9BcFllV1JLWWxkaVdTdFha
      bGRzTTJWcU9ERTRlVzgzVUdKNU4xQlZTMGg2Tm1obGJrRllhakZZZHpKbWJFVXdja1V6SzBGSFlW
      TmFWMmRVYzNaYWFuTnJDa2hUVkdWamF6TXlhMkUzZWsxa2FEZHhSRkJ0VTNGQlkwOXRRWFZSZWxC
      VEt6UmlkbWtyUWxaRVZEaFlaSGhRVHpBMlpTdDNVV3BRY0VSWFRFaE1NMVFLUTFGeFJUVkNiVkpx
      VGxGRFVHODJNMlJVTUVwcU1USnFXa2xpY1VabVVIZHBiMWxhVTA5cVNuQmlNVmt4VWpSWFFXOXdT
      VGhzZDBjMVJrZEZaRTV2TVFvd2VFaHBkVkoyTjFjck0weFBRa3hCUldwM2QwdG9PRkE0VDI5UWVq
      SnlSMFpKY2pCSlUyeFROR0oyYkM5SmRuaDZTR2xFT1ZWMldUTjFZVk5uWVZoWkNsZzNSbkpxUW1a
      TFEzSlhRbFZTUm1oVEwyOXZhMlJRUVdWb1NsVlpZWHBsYlZRck1XNHJVM2h3YTFCMmFWQnRiRVJy
      ZDB0c2NIYzBlbTFtTms0NFZDc0tNbEVyZEdSR1pqRXlPWFJJVTJoMU1IaFhkVmhsTmpCc0wyZEdZ
      aTlpZUZaQlNrVnVabmxQY2xaa1kxUXpTMVJVVUhRdk5qSnhSWEl3T0VWamJXTkpWQXBGWnpWME5u
      YzRTbVp4TkQwS1BWaEJhME1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} update -d 2 -y --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Apply RHBA-2007:0331
# Identifier: (vulnerabilities:RHBA-2007:0331,fix)
# Version: test
- name: update packages
  hosts: \\"53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"RHBA-2007:0331\\"
    insights_signature_exclude: \\"/hosts,/vars/insights_signature,/vars/insights_issues\\"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRWGh6ZG5jMU9FUXJhalZ3VGtGUlp5OUxRa0ZCYTNacE9V
      Tm9VaTlTWmtaV0syVjFZVmxsUVhCc1pVOXFTMDVwTldVeFJqTUtSRkpNTkhjMUwyRkdOR1pRVDJw
      UmRtbzBPVnB0Wmt4d1FrRlpjVWh4WTNjMFZIcHJha2RqY0dGUWNVMDBiVE5vWTIxSFJTdEJhbmhN
      TUhwcWRXVktTZ293YTJoVVNHTnFXbFprUW1WSVMzVjBOVXRRZFRoUVJIRm1jREU0UlVoUFQzcHNZ
      MjF3ZVdsblR6WkxZbU5UVjFaTmVVTjZkR0l3UzBGTFFqWktibmw2Q25GWWFUbDJkWEZ6WWt0dE5s
      cHZSa3hSTlVWQ1pqRmhZVlo2V1ZsdVFrMXNlVFp4ZFZOelpEZEVia2xLYm0weGVreE1iV1EwUzFw
      QmJWcGFkMVFyZFdVS1JrNHhRMDUwZGpaRk9GWTNTM2sxZDFVeFdYRnVRWGh4YW5FNGRrSlZiVE5R
      YURKcVVEZERhRE5MWTFkYU1IZDNTMk1yWldRME4yeE5XVTUyUkhnMU9BcFllV1JLWWxkaVdTdFha
      bGRzTTJWcU9ERTRlVzgzVUdKNU4xQlZTMGg2Tm1obGJrRllhakZZZHpKbWJFVXdja1V6SzBGSFlW
      TmFWMmRVYzNaYWFuTnJDa2hUVkdWamF6TXlhMkUzZWsxa2FEZHhSRkJ0VTNGQlkwOXRRWFZSZWxC
      VEt6UmlkbWtyUWxaRVZEaFlaSGhRVHpBMlpTdDNVV3BRY0VSWFRFaE1NMVFLUTFGeFJUVkNiVkpx
      VGxGRFVHODJNMlJVTUVwcU1USnFXa2xpY1VabVVIZHBiMWxhVTA5cVNuQmlNVmt4VWpSWFFXOXdT
      VGhzZDBjMVJrZEZaRTV2TVFvd2VFaHBkVkoyTjFjck0weFBRa3hCUldwM2QwdG9PRkE0VDI5UWVq
      SnlSMFpKY2pCSlUyeFROR0oyYkM5SmRuaDZTR2xFT1ZWMldUTjFZVk5uWVZoWkNsZzNSbkpxUW1a
      TFEzSlhRbFZTUm1oVEwyOXZhMlJRUVdWb1NsVlpZWHBsYlZRck1XNHJVM2h3YTFCMmFWQnRiRVJy
      ZDB0c2NIYzBlbTFtTms0NFZDc0tNbEVyZEdSR1pqRXlPWFJJVTJoMU1IaFhkVmhsTmpCc0wyZEdZ
      aTlpZUZaQlNrVnVabmxQY2xaa1kxUXpTMVJVVUhRdk5qSnhSWEl3T0VWamJXTkpWQXBGWnpWME5u
      YzRTbVp4TkQwS1BWaEJhME1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} update -d 2 -y --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Upgrade packages affected by CVE-2017-17712
# Identifier: (vulnerabilities:CVE-2017-17712,fix)
# Version: test
- name: update vulnerable packages
  hosts: \\"53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"CVE-2017-17712\\"
    insights_signature_exclude: /hosts,/vars/insights_signature,/vars/insights_issues
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBTR2ROZG5jMU9FUXJhalZ3VGtGUmFqUnNRUzh2WlVKc1JH
      Sk1Rbk5JT0UxRFFuZEpkSEZMZW1SclduaDVNa2xCZW0xNlYyc0tLMHN3YmpBeWVIUnlWR2RwZG5B
      dlp6TTFXVVpQYjI5UVdqQTRka2xtWVdGVVZEVm5OVWRGZUhsRlVWVXJTMVZPVlVsUVRsUmxlVWxh
      WTJ3cmRuVkhWZ28zTTIxUldVUmlibE5qUkhKdVJFeE5kMUI0SzI0ME1WcGtRbkUzUml0TE5XbFJO
      bE5QTm5BNE5sUkJSbE5aVTFwYWVWUjJXVTl2UVZWRWNGQlFVWFpzQ2pWVVJWUnhOeTg1WWs1cFdY
      RTBRVTV4YzFwbU1GSXlUV3RRT0c5VVRVNVpVVTQ0VFRSMlNsUmFPR1JuUVRsa0sxUnFZbVZ0YmxS
      cmNEVk5VRXQwVWtzS01UWnFVMmg2ZW0xWFJFRjJSa1ZJVFc1U01FWTNla0pUU1c0emJYTkphRzVN
      YVdjelFqQkxSM1pyYWtaaGRUWldSa01yWkU5blZUbFBZakY2UkhOVlJRcHZRbWgwYXpkek1YQllU
      VWhOVW5wUVZHcDRiV3RQTDIxd09ISXhhMnhGZHpNMU5qUnNkMk52YmtKamJHOUVhbXRyWm5OalR6
      Y3lORGhHZVRJMFYxTmFDalJ1VFRCelYyVnpWRGxJUTFSelpITnRhVkV2WkhoQ01WQllkMlJFZHpC
      RFVuWnNRblpWUjNadWFHOXRNWEJCUTBveFFXbE5PRFI2VW1ZMU4zbHZWVzhLUjJabmVFaFpUMmhJ
      UW5oeE0wcFVjWEpST0U5UlkyOUlUbXR0VEdob2VqZGlWRWx5ZEZNM2FXUk1kQzl0UkVWSGJHZE1k
      VE5KWVdsUUsxWmtSbXRGY1FwdVExWXliSGxJWjJ4YVduTXJTM0F2YzAxd2NsSjFXRzk0TUVGa1RW
      SkVTR2xPU2pWRE9YVXdlR2x6WldSQlZIVkZaa05aZUZKSVV6TllWMjA0VUZCWUNteHJPV2t4VkVs
      cWRGRlVPRE53YzBObk9FSkxVRFV5WmxweU0wdG1UWEZVYnk5TkwzUTFVV1V6TXpKQ1RXaDNWblI0
      Wnpndk16YzNTSHBGUzNGRVdGWUtXbEpRTkRoTVkzVmhjbVpNTmtwUVp5dEtNbnBMUVZBMlZsUkVh
      RzR3YTBSVE5HWkhVR295Vm14SFp6SklXRGRJTWpGRWJFbzFWa1ZDV1RKbGJVNUdTQW96YW1VNFJV
      cEdiMGxJWnowS1BWRmpkRkFLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} upgrade -v -y --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Reboots a system if any of the preceeding plays sets the 'insights_needs_reboot' variable to true.
# The variable can be overridden to suppress this behavior.
- name: Reboot system (if applicable)
  hosts: \\"53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com,68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRMVk0ZG5jMU9FUXJhalZ3VGtGUmFrMUVRa0ZCYTJOeE1W
      WlhVbEF3VUVoMGRIRjBWMGt4UkZSdU4zcE1kbFUyU0hKd2QxSUtUbkJ3Um5SWGJWRktiM2xxYm1w
      bE5XUmFSemMxUTNCU1kzZGFPRU5XVW5sRlRVRXpVREExZW1Kc1UzSnFWbTUxVW5oNlpVeG1SbTFy
      YW1SRVJWcHdjZ3ByWTJ0d2FFazJSVUpIYWtJemEyaGFUalJ5YTNwUWRWQm1PR1pMUVdsSE1ESmxk
      SGhXVFZWV01tZHRkV3c0UjBJMmRIcEpkRk5uVFRGQlFYQkdORTFRQ2s1NFRDOUpUMlY2ZFdRMGFt
      VlFaV05KZWpGS1dtMTVkVGgzWTNoVFZqWkpTbTVPU1VGSGVHYzVWRUpVYzNNMFEwbHVaVlZXY0RG
      VWRrUlFPUzlHVXk4S2VGaFlaMFphWlM5VlZuQjBaRzA1ZDJkbmRVOXRiR2hvWVZCTVZHNU5Tbkoy
      UVRsV2FVUnZRVzV2WWt0b1VIbEtZMHBSYjJOTFdrRlRjVTF6ZWs1VWNncHVNek5JYlRoUk9IQnRW
      VTFLYldobU9VRnZkM2x4VW5GWVVHeHpXVGwzT0UxRU1WQkZjR3htY2pJeVlYTjFMMHhvYjNGNlIz
      TmtOMUUxTTJwdFMyNXBDaXM1Y0VjeWEzVkNSVXhpVVhoblRHcERiVlZsUzFCdmJuaFhjM0JuVFZs
      M2VYQjFaVFJvYnl0dmFsZG5WRGR2ZG1GbFRFNVRTMkV2UkZOS2JEWldRaThLZEd4YUwxUXJPRFZr
      Ym5ZclNWb3phbEJTZFM5bVpuZFBkVVpVV2xoNmVGTkJUalZSV1M5ak15c3hhbUZSTDBKeFdYTmhi
      M2RpUkZreGRXUXZVeXRsYVFwa2FEa3JWRkV5TlVKa1NYa3hibGh3ZWpoV1JHbHpjbEp3Y0VrNWFs
      SldWakkwTVVVelRVWkhka1ZaTm1aVFYzSlZWMWMzY0RKbFpUbGphelpOVlUweUNrNUZjRXBLWm5G
      UFNFdHBjRXRPZVRKdVFVRTJURmcxTHpNeGFWSk9VSEZZVXpKRVdqSlpkbVZTUTJOMmVDOHZPVTlo
      UzFWd1FsZElZVmxYYW5STU4wWUtSWFJWVEZGeFZESkJPVTF3WjFSU1RtOU5WbEZ4Y1haQ01GUlBP
      WE00TmxoTmRuUkdRa1IzYW5SbWIxSm9NRnBEYlUwME1FRlhRMHBxT0RKNlduTlRZUXBCYXpkUEsy
      UkpkMFl5VVQwS1BWcEtiallLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - when:
        - insights_needs_reboot is defined
        - insights_needs_reboot
      block:
        - name: Reboot system
          shell: sleep 2 && shutdown -r now \\"Ansible triggered reboot\\"
          async: 1
          poll: 0
          ignore_errors: true

        - name: Wait for system to boot up
          local_action:
            module: wait_for
            host: \\"{{ hostvars[inventory_hostname]['ansible_host'] | default(hostvars[inventory_hostname]['ansible_ssh_host'], true) | default(inventory_hostname, true) }}\\"
            port: \\"{{ hostvars[inventory_hostname]['ansible_port'] | default(hostvars[inventory_hostname]['ansible_ssh_port'], true) | default('22', true) }}\\"
            delay: 15
            search_regex: OpenSSH
            timeout: 300
          become: false

- name: run insights
  hosts: \\"53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com,68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`generates a simple playbook with single CVE remediation 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Upgrade packages affected by CVE-2017-17712
# Identifier: (vulnerabilities:CVE-2017-17712,fix)
# Version: test-version
- name: update vulnerable packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"CVE-2017-17712\\"
    insights_signature_exclude: /hosts,/vars/insights_signature,/vars/insights_issues
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBTR2ROZG5jMU9FUXJhalZ3VGtGUmFqUnNRUzh2WlVKc1JH
      Sk1Rbk5JT0UxRFFuZEpkSEZMZW1SclduaDVNa2xCZW0xNlYyc0tLMHN3YmpBeWVIUnlWR2RwZG5B
      dlp6TTFXVVpQYjI5UVdqQTRka2xtWVdGVVZEVm5OVWRGZUhsRlVWVXJTMVZPVlVsUVRsUmxlVWxh
      WTJ3cmRuVkhWZ28zTTIxUldVUmlibE5qUkhKdVJFeE5kMUI0SzI0ME1WcGtRbkUzUml0TE5XbFJO
      bE5QTm5BNE5sUkJSbE5aVTFwYWVWUjJXVTl2UVZWRWNGQlFVWFpzQ2pWVVJWUnhOeTg1WWs1cFdY
      RTBRVTV4YzFwbU1GSXlUV3RRT0c5VVRVNVpVVTQ0VFRSMlNsUmFPR1JuUVRsa0sxUnFZbVZ0YmxS
      cmNEVk5VRXQwVWtzS01UWnFVMmg2ZW0xWFJFRjJSa1ZJVFc1U01FWTNla0pUU1c0emJYTkphRzVN
      YVdjelFqQkxSM1pyYWtaaGRUWldSa01yWkU5blZUbFBZakY2UkhOVlJRcHZRbWgwYXpkek1YQllU
      VWhOVW5wUVZHcDRiV3RQTDIxd09ISXhhMnhGZHpNMU5qUnNkMk52YmtKamJHOUVhbXRyWm5OalR6
      Y3lORGhHZVRJMFYxTmFDalJ1VFRCelYyVnpWRGxJUTFSelpITnRhVkV2WkhoQ01WQllkMlJFZHpC
      RFVuWnNRblpWUjNadWFHOXRNWEJCUTBveFFXbE5PRFI2VW1ZMU4zbHZWVzhLUjJabmVFaFpUMmhJ
      UW5oeE0wcFVjWEpST0U5UlkyOUlUbXR0VEdob2VqZGlWRWx5ZEZNM2FXUk1kQzl0UkVWSGJHZE1k
      VE5KWVdsUUsxWmtSbXRGY1FwdVExWXliSGxJWjJ4YVduTXJTM0F2YzAxd2NsSjFXRzk0TUVGa1RW
      SkVTR2xPU2pWRE9YVXdlR2x6WldSQlZIVkZaa05aZUZKSVV6TllWMjA0VUZCWUNteHJPV2t4VkVs
      cWRGRlVPRE53YzBObk9FSkxVRFV5WmxweU0wdG1UWEZVYnk5TkwzUTFVV1V6TXpKQ1RXaDNWblI0
      Wnpndk16YzNTSHBGUzNGRVdGWUtXbEpRTkRoTVkzVmhjbVpNTmtwUVp5dEtNbnBMUVZBMlZsUkVh
      RzR3YTBSVE5HWkhVR295Vm14SFp6SklXRGRJTWpGRWJFbzFWa1ZDV1RKbGJVNUdTQW96YW1VNFJV
      cEdiMGxJWnowS1BWRmpkRkFLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} upgrade -v -y --cve {{ insights_issues | regex_search('(CVE-[0-9]{4}-[0-9]+( --cve CVE-[0-9]{4}-[0-9]+)*)') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Reboots a system if any of the preceeding plays sets the 'insights_needs_reboot' variable to true.
# The variable can be overridden to suppress this behavior.
- name: Reboot system (if applicable)
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRMVk0ZG5jMU9FUXJhalZ3VGtGUmFrMUVRa0ZCYTJOeE1W
      WlhVbEF3VUVoMGRIRjBWMGt4UkZSdU4zcE1kbFUyU0hKd2QxSUtUbkJ3Um5SWGJWRktiM2xxYm1w
      bE5XUmFSemMxUTNCU1kzZGFPRU5XVW5sRlRVRXpVREExZW1Kc1UzSnFWbTUxVW5oNlpVeG1SbTFy
      YW1SRVJWcHdjZ3ByWTJ0d2FFazJSVUpIYWtJemEyaGFUalJ5YTNwUWRWQm1PR1pMUVdsSE1ESmxk
      SGhXVFZWV01tZHRkV3c0UjBJMmRIcEpkRk5uVFRGQlFYQkdORTFRQ2s1NFRDOUpUMlY2ZFdRMGFt
      VlFaV05KZWpGS1dtMTVkVGgzWTNoVFZqWkpTbTVPU1VGSGVHYzVWRUpVYzNNMFEwbHVaVlZXY0RG
      VWRrUlFPUzlHVXk4S2VGaFlaMFphWlM5VlZuQjBaRzA1ZDJkbmRVOXRiR2hvWVZCTVZHNU5Tbkoy
      UVRsV2FVUnZRVzV2WWt0b1VIbEtZMHBSYjJOTFdrRlRjVTF6ZWs1VWNncHVNek5JYlRoUk9IQnRW
      VTFLYldobU9VRnZkM2x4VW5GWVVHeHpXVGwzT0UxRU1WQkZjR3htY2pJeVlYTjFMMHhvYjNGNlIz
      TmtOMUUxTTJwdFMyNXBDaXM1Y0VjeWEzVkNSVXhpVVhoblRHcERiVlZsUzFCdmJuaFhjM0JuVFZs
      M2VYQjFaVFJvYnl0dmFsZG5WRGR2ZG1GbFRFNVRTMkV2UkZOS2JEWldRaThLZEd4YUwxUXJPRFZr
      Ym5ZclNWb3phbEJTZFM5bVpuZFBkVVpVV2xoNmVGTkJUalZSV1M5ak15c3hhbUZSTDBKeFdYTmhi
      M2RpUkZreGRXUXZVeXRsYVFwa2FEa3JWRkV5TlVKa1NYa3hibGh3ZWpoV1JHbHpjbEp3Y0VrNWFs
      SldWakkwTVVVelRVWkhka1ZaTm1aVFYzSlZWMWMzY0RKbFpUbGphelpOVlUweUNrNUZjRXBLWm5G
      UFNFdHBjRXRPZVRKdVFVRTJURmcxTHpNeGFWSk9VSEZZVXpKRVdqSlpkbVZTUTJOMmVDOHZPVTlo
      UzFWd1FsZElZVmxYYW5STU4wWUtSWFJWVEZGeFZESkJPVTF3WjFSU1RtOU5WbEZ4Y1haQ01GUlBP
      WE00TmxoTmRuUkdRa1IzYW5SbWIxSm9NRnBEYlUwME1FRlhRMHBxT0RKNlduTlRZUXBCYXpkUEsy
      UkpkMFl5VVQwS1BWcEtiallLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - when:
        - insights_needs_reboot is defined
        - insights_needs_reboot
      block:
        - name: Reboot system
          shell: sleep 2 && shutdown -r now \\"Ansible triggered reboot\\"
          async: 1
          poll: 0
          ignore_errors: true

        - name: Wait for system to boot up
          local_action:
            module: wait_for
            host: \\"{{ hostvars[inventory_hostname]['ansible_host'] | default(hostvars[inventory_hostname]['ansible_ssh_host'], true) | default(inventory_hostname, true) }}\\"
            port: \\"{{ hostvars[inventory_hostname]['ansible_port'] | default(hostvars[inventory_hostname]['ansible_ssh_port'], true) | default('22', true) }}\\"
            delay: 15
            search_regex: OpenSSH
            timeout: 300
          become: false

- name: run insights
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`generates a simple playbook with single RHSA remediation 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Apply RHSA-2018:0502
# Identifier: (vulnerabilities:RHSA-2018:0502,fix)
# Version: test
- name: update packages
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  vars:
    insights_issues: \\"RHSA-2018:0502\\"
    insights_signature_exclude: \\"/hosts,/vars/insights_signature,/vars/insights_issues\\"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRWGh6ZG5jMU9FUXJhalZ3VGtGUlp5OUxRa0ZCYTNacE9V
      Tm9VaTlTWmtaV0syVjFZVmxsUVhCc1pVOXFTMDVwTldVeFJqTUtSRkpNTkhjMUwyRkdOR1pRVDJw
      UmRtbzBPVnB0Wmt4d1FrRlpjVWh4WTNjMFZIcHJha2RqY0dGUWNVMDBiVE5vWTIxSFJTdEJhbmhN
      TUhwcWRXVktTZ293YTJoVVNHTnFXbFprUW1WSVMzVjBOVXRRZFRoUVJIRm1jREU0UlVoUFQzcHNZ
      MjF3ZVdsblR6WkxZbU5UVjFaTmVVTjZkR0l3UzBGTFFqWktibmw2Q25GWWFUbDJkWEZ6WWt0dE5s
      cHZSa3hSTlVWQ1pqRmhZVlo2V1ZsdVFrMXNlVFp4ZFZOelpEZEVia2xLYm0weGVreE1iV1EwUzFw
      QmJWcGFkMVFyZFdVS1JrNHhRMDUwZGpaRk9GWTNTM2sxZDFVeFdYRnVRWGh4YW5FNGRrSlZiVE5R
      YURKcVVEZERhRE5MWTFkYU1IZDNTMk1yWldRME4yeE5XVTUyUkhnMU9BcFllV1JLWWxkaVdTdFha
      bGRzTTJWcU9ERTRlVzgzVUdKNU4xQlZTMGg2Tm1obGJrRllhakZZZHpKbWJFVXdja1V6SzBGSFlW
      TmFWMmRVYzNaYWFuTnJDa2hUVkdWamF6TXlhMkUzZWsxa2FEZHhSRkJ0VTNGQlkwOXRRWFZSZWxC
      VEt6UmlkbWtyUWxaRVZEaFlaSGhRVHpBMlpTdDNVV3BRY0VSWFRFaE1NMVFLUTFGeFJUVkNiVkpx
      VGxGRFVHODJNMlJVTUVwcU1USnFXa2xpY1VabVVIZHBiMWxhVTA5cVNuQmlNVmt4VWpSWFFXOXdT
      VGhzZDBjMVJrZEZaRTV2TVFvd2VFaHBkVkoyTjFjck0weFBRa3hCUldwM2QwdG9PRkE0VDI5UWVq
      SnlSMFpKY2pCSlUyeFROR0oyYkM5SmRuaDZTR2xFT1ZWMldUTjFZVk5uWVZoWkNsZzNSbkpxUW1a
      TFEzSlhRbFZTUm1oVEwyOXZhMlJRUVdWb1NsVlpZWHBsYlZRck1XNHJVM2h3YTFCMmFWQnRiRVJy
      ZDB0c2NIYzBlbTFtTms0NFZDc0tNbEVyZEdSR1pqRXlPWFJJVTJoMU1IaFhkVmhsTmpCc0wyZEdZ
      aTlpZUZaQlNrVnVabmxQY2xaa1kxUXpTMVJVVUhRdk5qSnhSWEl3T0VWamJXTkpWQXBGWnpWME5u
      YzRTbVp4TkQwS1BWaEJhME1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  become: true
  tasks:
    - name: check for update
      shell: \\"{{ ansible_facts['pkg_mgr'] }} check-update -q --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100
      args:
        warn: false

    - when: check_out.rc == 100
      name: upgrade package
      shell: \\"{{ ansible_facts['pkg_mgr'] }} update -d 2 -y --advisory {{ insights_issues | regex_search('RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5}( --advisory RH[SBE]A-20[\\\\\\\\d]{2}:[\\\\\\\\d]{4,5})*') }}\\"
      args:
        warn: false

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: true

# Reboots a system if any of the preceeding plays sets the 'insights_needs_reboot' variable to true.
# The variable can be overridden to suppress this behavior.
- name: Reboot system (if applicable)
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRMVk0ZG5jMU9FUXJhalZ3VGtGUmFrMUVRa0ZCYTJOeE1W
      WlhVbEF3VUVoMGRIRjBWMGt4UkZSdU4zcE1kbFUyU0hKd2QxSUtUbkJ3Um5SWGJWRktiM2xxYm1w
      bE5XUmFSemMxUTNCU1kzZGFPRU5XVW5sRlRVRXpVREExZW1Kc1UzSnFWbTUxVW5oNlpVeG1SbTFy
      YW1SRVJWcHdjZ3ByWTJ0d2FFazJSVUpIYWtJemEyaGFUalJ5YTNwUWRWQm1PR1pMUVdsSE1ESmxk
      SGhXVFZWV01tZHRkV3c0UjBJMmRIcEpkRk5uVFRGQlFYQkdORTFRQ2s1NFRDOUpUMlY2ZFdRMGFt
      VlFaV05KZWpGS1dtMTVkVGgzWTNoVFZqWkpTbTVPU1VGSGVHYzVWRUpVYzNNMFEwbHVaVlZXY0RG
      VWRrUlFPUzlHVXk4S2VGaFlaMFphWlM5VlZuQjBaRzA1ZDJkbmRVOXRiR2hvWVZCTVZHNU5Tbkoy
      UVRsV2FVUnZRVzV2WWt0b1VIbEtZMHBSYjJOTFdrRlRjVTF6ZWs1VWNncHVNek5JYlRoUk9IQnRW
      VTFLYldobU9VRnZkM2x4VW5GWVVHeHpXVGwzT0UxRU1WQkZjR3htY2pJeVlYTjFMMHhvYjNGNlIz
      TmtOMUUxTTJwdFMyNXBDaXM1Y0VjeWEzVkNSVXhpVVhoblRHcERiVlZsUzFCdmJuaFhjM0JuVFZs
      M2VYQjFaVFJvYnl0dmFsZG5WRGR2ZG1GbFRFNVRTMkV2UkZOS2JEWldRaThLZEd4YUwxUXJPRFZr
      Ym5ZclNWb3phbEJTZFM5bVpuZFBkVVpVV2xoNmVGTkJUalZSV1M5ak15c3hhbUZSTDBKeFdYTmhi
      M2RpUkZreGRXUXZVeXRsYVFwa2FEa3JWRkV5TlVKa1NYa3hibGh3ZWpoV1JHbHpjbEp3Y0VrNWFs
      SldWakkwTVVVelRVWkhka1ZaTm1aVFYzSlZWMWMzY0RKbFpUbGphelpOVlUweUNrNUZjRXBLWm5G
      UFNFdHBjRXRPZVRKdVFVRTJURmcxTHpNeGFWSk9VSEZZVXpKRVdqSlpkbVZTUTJOMmVDOHZPVTlo
      UzFWd1FsZElZVmxYYW5STU4wWUtSWFJWVEZGeFZESkJPVTF3WjFSU1RtOU5WbEZ4Y1haQ01GUlBP
      WE00TmxoTmRuUkdRa1IzYW5SbWIxSm9NRnBEYlUwME1FRlhRMHBxT0RKNlduTlRZUXBCYXpkUEsy
      UkpkMFl5VVQwS1BWcEtiallLTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - when:
        - insights_needs_reboot is defined
        - insights_needs_reboot
      block:
        - name: Reboot system
          shell: sleep 2 && shutdown -r now \\"Ansible triggered reboot\\"
          async: 1
          poll: 0
          ignore_errors: true

        - name: Wait for system to boot up
          local_action:
            module: wait_for
            host: \\"{{ hostvars[inventory_hostname]['ansible_host'] | default(hostvars[inventory_hostname]['ansible_ssh_host'], true) | default(inventory_hostname, true) }}\\"
            port: \\"{{ hostvars[inventory_hostname]['ansible_port'] | default(hostvars[inventory_hostname]['ansible_ssh_port'], true) | default('22', true) }}\\"
            delay: 15
            search_regex: OpenSSH
            timeout: 300
          become: false

- name: run insights
  hosts: \\"68799a02-8be9-11e8-9eb6-529269fb1459.example.com\\"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;
